--- a/zoey-common/pom.xml
+++ b/zoey-common/pom.xml
@@ -23,19 +23,19 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <!-- Api文档-->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-        </dependency>
+        <!-- <dependency> -->
+        <!--     <groupId>org.springdoc</groupId> -->
+        <!--     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId> -->
+        <!-- </dependency> -->
+        <!-- <dependency> -->
+        <!--     <groupId>org.springdoc</groupId> -->
+        <!--     <artifactId>springdoc-openapi-starter-webmvc-api</artifactId> -->
+        <!-- </dependency> -->
         <!-- servlet api -->
-        <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-        </dependency>
+        <!-- <dependency> -->
+        <!--     <groupId>jakarta.servlet</groupId> -->
+        <!--     <artifactId>jakarta.servlet-api</artifactId> -->
+        <!-- </dependency> -->
         <!-- 对象转换-->
         <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
         <dependency>
