--- a/dubbo-interface/pom.xml
+++ b/dubbo-interface/pom.xml
@@ -16,5 +16,11 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>cn.sxgan</groupId>
+            <artifactId>zoey-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
